Fix findBySurname_without_special test